--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^5.0.0",
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "~2.0.9",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
